attempting to fix badly formatted checkboxes on iphone

--- a/client/src/components/UI/Checkbox/Checkbox.css
+++ b/client/src/components/UI/Checkbox/Checkbox.css
@@ -36,9 +36,3 @@
 	left: 3px;
 	color: white;
 }
-
-.Checkbox {
-	-webkit-appearance: none;
-	-moz-appearance:    none;
-	appearance:         none;
-  }
